# fastapi-sqlmodel

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  crud.py  db.py  main.py  models.py  test.py  test_wrapper.py
backend/migrations/: env.py
